# TerminalEngine

./: .gitignore  CMakeLists.txt  README.md
src/Battleships/: main.c
src/Game/: main.c
src/TerminalEngine/: Math.c  Math.h
src/TerminalEngine/Renderer/: Renderer.c  Renderer.h
src/TerminalEngine/Windows/: Application.c  Application.h  Input.c  Input.h
